--- a/_modules/airflow_config/configuration/base.html
+++ b/_modules/airflow_config/configuration/base.html
@@ -4,10 +4,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="color-scheme" content="light dark"><link rel="index" title="Index" href="../../../genindex.html"><link rel="search" title="Search" href="../../../search.html">
 
-    <!-- Generated with Sphinx 8.2.3 and Furo 2025.09.25 -->
+    <!-- Generated with Sphinx 8.2.3 and Furo 2025.12.19 -->
         <title>airflow_config.configuration.base - airflow-config v1.11.0</title>
       <link rel="stylesheet" type="text/css" href="../../../_static/pygments.css?v=03e43079" />
-    <link rel="stylesheet" type="text/css" href="../../../_static/styles/furo.css?v=580074bf" />
+    <link rel="stylesheet" type="text/css" href="../../../_static/styles/furo.css?v=7bdb33bb" />
     <link rel="stylesheet" type="text/css" href="../../../_static/mystnb.8ecb98da25f57f5357bf6f572d296f466b2cfe2517ffebfabe82451661e28f02.css" />
     <link rel="stylesheet" type="text/css" href="../../../_static/copybutton.css?v=76b2166b" />
     <link rel="stylesheet" type="text/css" href="../../../_static/graphviz.css?v=4ae1632d" />
@@ -247,7 +247,7 @@
 <span class="kn">from</span><span class="w"> </span><span class="nn">typing</span><span class="w"> </span><span class="kn">import</span> <span class="n">Dict</span><span class="p">,</span> <span class="n">Optional</span>
 
 <span class="kn">from</span><span class="w"> </span><span class="nn">airflow_pydantic</span><span class="w"> </span><span class="kn">import</span> <span class="n">BaseModel</span><span class="p">,</span> <span class="n">Dag</span><span class="p">,</span> <span class="n">DagArgs</span><span class="p">,</span> <span class="n">TaskArgs</span>
-<span class="kn">from</span><span class="w"> </span><span class="nn">airflow_pydantic.airflow</span><span class="w"> </span><span class="kn">import</span> <span class="n">NEW_SESSION</span><span class="p">,</span> <span class="n">EmptyOperator</span><span class="p">,</span> <span class="n">provide_session</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">airflow_pydantic.airflow</span><span class="w"> </span><span class="kn">import</span> <span class="n">EmptyOperator</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">hydra</span><span class="w"> </span><span class="kn">import</span> <span class="n">compose</span><span class="p">,</span> <span class="n">initialize_config_dir</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">hydra.utils</span><span class="w"> </span><span class="kn">import</span> <span class="n">instantiate</span>
 <span class="kn">from</span><span class="w"> </span><span class="nn">pydantic</span><span class="w"> </span><span class="kn">import</span> <span class="n">AliasChoices</span><span class="p">,</span> <span class="n">BaseModel</span> <span class="k">as</span> <span class="n">PydanticBaseModel</span><span class="p">,</span> <span class="n">Field</span><span class="p">,</span> <span class="n">SerializeAsAny</span><span class="p">,</span> <span class="n">model_validator</span>
@@ -456,8 +456,7 @@
 
 <div class="viewcode-block" id="Configuration.generate_in_mem">
 <a class="viewcode-back" href="../../../docs/src/_build/airflow_config.Configuration.html#airflow_config.Configuration.generate_in_mem">[docs]</a>
-    <span class="nd">@provide_session</span>
-    <span class="k">def</span><span class="w"> </span><span class="nf">generate_in_mem</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="nb">dir</span><span class="p">:</span> <span class="n">Path</span> <span class="o">|</span> <span class="nb">str</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span> <span class="n">session</span><span class="o">=</span><span class="n">NEW_SESSION</span><span class="p">,</span> <span class="n">placeholder_dag_id</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">&quot;airflow-config-generate-dags&quot;</span><span class="p">):</span>
+    <span class="k">def</span><span class="w"> </span><span class="nf">generate_in_mem</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="nb">dir</span><span class="p">:</span> <span class="n">Path</span> <span class="o">|</span> <span class="nb">str</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span> <span class="n">placeholder_dag_id</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">&quot;airflow-config-generate-dags&quot;</span><span class="p">):</span>
         <span class="kn">from</span><span class="w"> </span><span class="nn">..dag</span><span class="w"> </span><span class="kn">import</span> <span class="n">DAG</span>
 
         <span class="n">cur_frame</span> <span class="o">=</span> <span class="n">currentframe</span><span class="p">()</span><span class="o">.</span><span class="n">f_back</span>
@@ -482,36 +481,7 @@
                 <span class="n">_log</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Updating DAG fileloc from </span><span class="si">{</span><span class="n">dag_instance</span><span class="o">.</span><span class="n">fileloc</span><span class="si">}</span><span class="s2"> to </span><span class="si">{</span><span class="nb">str</span><span class="p">(</span><span class="n">dag_path</span><span class="p">)</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
                 <span class="n">dag_instance</span><span class="o">.</span><span class="n">fileloc</span> <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="n">dag_path</span><span class="p">)</span>
                 <span class="n">cur_frame</span><span class="o">.</span><span class="n">f_globals</span><span class="p">[</span><span class="n">dag_id</span><span class="p">]</span> <span class="o">=</span> <span class="n">dag_instance</span>
-
-                <span class="c1"># Swap out DagCode</span>
-                <span class="c1"># First, grab DAG code</span>
-                <span class="c1"># _log.info(f&quot;Updating DagModel for {dag_id} in memory&quot;)</span>
-                <span class="c1"># query = select(DagModel).where(DagModel.dag_id == dag_id)</span>
-                <span class="c1"># query = with_row_locks(query, of=DagModel, session=session)</span>
-                <span class="c1"># orm_dag: DagModel = session.scalars(query).unique().first()</span>
-
-                <span class="c1"># if not orm_dag:</span>
-                <span class="c1">#     _log.info(f&quot;No existing DagModel found for {dag_id}, check logs!&quot;)</span>
-                <span class="c1">#     continue</span>
-                <span class="c1"># else:</span>
-                <span class="c1">#     orm_dag.fileloc = str(dag_path)</span>
-                <span class="c1">#     orm_dag.last_parsed_time = timezone.utcnow()</span>
-                <span class="c1">#     session.merge(orm_dag)</span>
-
-                <span class="c1"># _log.info(f&quot;Updating DagCode for {dag_id} in memory&quot;)</span>
-                <span class="c1"># dag_code = DagCode(full_filepath=str(dag_path), source_code=rendered)</span>
-                <span class="c1"># _log.info(f&quot;Querying DB for {dag_code.fileloc_hash}&quot;)</span>
-                <span class="c1"># existing_orm_dag_code = session.scalars(select(DagCode).where(DagCode.fileloc_hash == dag_code.fileloc_hash)).first()</span>
-                <span class="c1"># if existing_orm_dag_code:</span>
-                <span class="c1">#     _log.info(f&quot;Updating existing DagCode for {dag_id} in memory&quot;)</span>
-                <span class="c1">#     existing_orm_dag_code.last_updated = timezone.utcnow()</span>
-                <span class="c1">#     existing_orm_dag_code.source_code = rendered</span>
-                <span class="c1">#     session.merge(existing_orm_dag_code)</span>
-                <span class="c1"># else:</span>
-                <span class="c1">#     _log.info(f&quot;Adding new DagCode for {dag_id} in memory&quot;)</span>
-                <span class="c1">#     session.add(dag_code)</span>
-                <span class="n">_log</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Adding DAG </span><span class="si">{</span><span class="n">dag_id</span><span class="si">}</span><span class="s2"> complete&quot;</span><span class="p">)</span>
-        <span class="n">session</span><span class="o">.</span><span class="n">commit</span><span class="p">()</span></div>
+                <span class="n">_log</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Adding DAG </span><span class="si">{</span><span class="n">dag_id</span><span class="si">}</span><span class="s2"> complete&quot;</span><span class="p">)</span></div>
 
 
 <div class="viewcode-block" id="Configuration.generate">
